sunvirgo_hg:day22_删除完成

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ servlet.context-path:crud
 spring.thymeleaf.cache=false
 #日期格式化器
 #spring.mvc.date-format=yyyy-mm-dd
+#问题：DeleteMapping找不到POST请求
+#解决办法：https://blog.csdn.net/qq_43648927/article/details/105329913
+#在application.yml或者application.properties中加入spring.mvc.hiddenmethod.filter.enabled = true 即可
+spring.mvc.hiddenmethod.filter.enabled = true
