--- a/day35-data-jdbc/pom.xml
+++ b/day35-data-jdbc/pom.xml
@@ -55,6 +55,15 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.15</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
