--- a/day35-data-jdbc/src/main/resources/application.yml
+++ b/day35-data-jdbc/src/main/resources/application.yml
@@ -8,3 +8,4 @@ spring:
     #  - classpath:department.sql
     #springboot2.x需要配置属性
     #initialization-mode: always
+    type: com.alibaba.druid.pool.DruidDataSource
